@@ -7,7 +7,7 @@ var getPathFromRequest = require('../express-utils').getPathFromRequest
 
 module.exports = function (graphql, agent, { version, enabled }) {
   if (!enabled) return graphql
-  if (!semver.satisfies(version, '>=0.7.0 <16.0.0 || ^14.0.0-rc') ||
+  if (!semver.satisfies(version, '>=0.7.0 <17.0.0 || ^14.0.0-rc') ||
       !graphql.Kind ||
       typeof graphql.Source !== 'function' ||
       typeof graphql.parse !== 'function' ||
@@ -79,7 +79,9 @@ module.exports = function (graphql, agent, { version, enabled }) {
   }
 
   function wrapExecute (orig) {
-    function wrappedExecuteImpl (schema, document, rootValue, contextValue, variableValues, operationName) {
+    return function wrappedExecute() {
+      var { document, operationName } = extractArgs(...arguments);
+      
       agent.logger.debug('intercepted call to graphql.execute')
       const span = ins.createSpan('GraphQL: Unknown Query', 'db', 'graphql', 'execute')
       if (!span) {
@@ -119,25 +121,19 @@ module.exports = function (graphql, agent, { version, enabled }) {
       }
       return p
     }
-
-    return function wrappedExecute (argsOrSchema, document, rootValue, contextValue, variableValues, operationName) {
-      return arguments.length === 1
-        ? wrappedExecuteImpl(
-          argsOrSchema.schema,
-          argsOrSchema.document,
-          argsOrSchema.rootValue,
-          argsOrSchema.contextValue,
-          argsOrSchema.variableValues,
-          argsOrSchema.operationName
-        )
-        : wrappedExecuteImpl(
-          argsOrSchema,
-          document,
-          rootValue,
-          contextValue,
-          variableValues,
-          operationName
-        )
+  }
+  
+  function extractArgs(argsOrSchema, document, rootValue, contextValue, variableValues, operationName) {
+    // Arg object
+    if (arguments.length === 1) {
+      return {
+        document: argsOrSchema.document,
+        operationName: argsOrSchema.operationName,
+      };
+    }
+    return {
+      document,
+      operationName,
     }
   }
 
